--- a/Projekt_ManagerFinansowy/templates/index.html
+++ b/Projekt_ManagerFinansowy/templates/index.html
@@ -52,6 +52,6 @@
   </div>
 </div>
 
-<script src="app.js"></script>
+<script src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
