opcja wyswietlania tabeli accounts

--- a/Projekt_ManagerFinansowy/templates/accounts.html
+++ b/Projekt_ManagerFinansowy/templates/accounts.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Accounts</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-$END$
+  <div class="container">
+    <h1>📄 Accounts</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Type</th>
+          <th>Balance</th>
+          <th>Currency</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for account in accounts %}
+        <tr>
+          <td>{{ account.name }}</td>
+          <td>{{ account.type }}</td>
+          <td>{{ account.balances.current }}</td>
+          <td>{{ account.balances.iso_currency_code }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <a href="/">🔙 Back</a>
+  </div>
 </body>
 </html>
