--- a/Projekt_ManagerFinansowy/templates/index.html
+++ b/Projekt_ManagerFinansowy/templates/index.html
@@ -81,13 +81,13 @@
         </form>
       </section>
 
-      <!-- Linki GET do API -->
+      <!-- Linki do widoków HTML -->
       <section class="links-section">
         <h2>📊 Sprawdź dane</h2>
         <div class="links">
-          <a href="/api/accounts?user_id=user_1" target="_blank">Pobierz konta</a>
-          <a href="/api/transactions?user_id=user_1" target="_blank">Pobierz transakcje</a>
-          <a href="/api/token?user_id=user_1" target="_blank">Podgląd zapisanych tokenów</a>
+          <a href="/accounts_view?user_id=user_1">💼 Konta</a>
+          <a href="/transactions_view?user_id=user_1">💳 Transakcje</a>
+          <a href="/tokens_view?user_id=user_1">🔐 Tokeny</a>
         </div>
       </section>
     </main>
